--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest fastapi httpx
+          pip install pytest fastapi httpx pytest-cov
       - name: Run tests
-        run: pytest backend
+        run: pytest backend --cov=backend --cov-report=xml
+      - uses: actions/upload-artifact@v3
+        with:
+          name: backend-coverage
+          path: coverage.xml
 
   frontend-tests:
     runs-on: ubuntu-latest
@@ -48,7 +52,12 @@ jobs:
         run: npm ci
       - name: Run tests
         working-directory: frontend
-        run: npm test
+        run: npm test -- --coverage
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: frontend-coverage
+          path: frontend/coverage
 
   docker:
     runs-on: ubuntu-latest
