feat: add payment provider integrations

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 # Example environment variables for external services
 API_FOOTBALL_HOST=https://api-football-v1.p.rapidapi.com/v3
 API_FOOTBALL_KEY=replace_me
+
+# Payment providers
+STRIPE_SECRET_KEY=replace_me
+STRIPE_PUBLIC_KEY=replace_me
+MERCADOPAGO_ACCESS_TOKEN=replace_me
+MERCADOPAGO_PUBLIC_KEY=replace_me
