--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
+          pip install -r backend/requirements.txt
       - name: Run flake8
         run: flake8 backend --max-line-length=120
 
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest fastapi httpx pytest-cov
+          pip install -r backend/requirements.txt
       - name: Run tests
         run: pytest backend --cov=backend --cov-report=xml
       - uses: actions/upload-artifact@v3
