feat: make database url configurable

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 # Example environment variables for external services
+# Database connection string. Use an in-memory database for tests
+# (``sqlite:///:memory:``) or point to your production database.
+DATABASE_URL=sqlite:///backend/models/app.db
 API_FOOTBALL_HOST=https://api-football-v1.p.rapidapi.com/v3
 API_FOOTBALL_KEY=replace_me
 
