--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
 
   backend-tests:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: sqlite:///:memory:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
