--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,5 +14,8 @@
     "react-dom": "^18.2.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "next": "^15.5.2"
   }
 }
